Upgrade semiotic, fix node spacing and dynamic height

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -717,6 +717,7 @@ label {
   opacity: 1;
   background-color: white;
   border: 0.1px solid gray;
+	font-size: 0.75rem;
 }
 
 .semiotic-axis path {
